# tech-challenge-04

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
app/: main.py
app/controllers/: health_check.py  machine_learning.py  observability.py
app/core/: logging.py  observability.py  routers.py  settings.py
app/dtos/: ml.py
app/services/: health_service.py  ml_service.py
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/grafana/provisioning/dashboards/json/: api-observability.json
ops/prometheus/: alerts.yml  prometheus.yml
ops/promtail/: promtail-config.yml
