[tool.poetry]
name = "tech-challenge-04"
version = "0.1.0"
description = "API FastAPI com modelo LSTM para previsão de preço de fechamento."
authors = ["Pedro Sousa"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = { version = "^0.115.6", extras = ["standard"] }
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic-settings = "^2.7.0"
numpy = "^1.26.4"
pandas = "^2.2.3"
yfinance = "^0.2.54"
scikit-learn = "^1.6.1"
tensorflow = "^2.18.0"
joblib = "^1.4.2"
psutil = "^7.0.0"
prometheus-client = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
